--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "silex/silex": "^2.2",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "guzzlehttp/guzzle": "^6.3"
     }
 }
